2020-11-06  Omar Polo  <op@omarpolo.com>

	* gmid.c (url_after_proto): ensure that the requested protocol is
	“gemini” and not something else that’s long 6 bytes.

2020-11-06  Omar Polo  <op@venera>

	* gmid.1: added option to log to a file

2020-11-05  Omar Polo  <op@omarpolo.com>

	* gmid.c (filetypes): add MIME type for xml files

2020-11-03  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): ignore SIGPIPE
	* 1.2 tagged

2020-10-14  Omar Polo  <op@omarpolo.com>

	* switching to mmap() based file handling
	* 1.1 tagged

2020-10-07  Omar Polo  <op@omarpolo.com>

	* 1.0 tagged