@@ -3,6 +3,9 @@
 	* gmid.c (url_after_proto): ensure that the requested protocol is
 	“gemini” and not something else that’s long 6 bytes.
 
+	* gmid.c (loop): added support for cgi scripts (can handle multiple
+	concurrently)
+
 2020-11-06  Omar Polo  <op@venera>
 
 	* gmid.1: added option to log to a file
